# file-watch

./: .gitignore  LICENSE  default.nix  file-watch.cabal
src/System/: FileWatch.hs
