cabal-version:      3.0
name:               file-watch
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             mingmingrr
maintainer:         mingmingrr@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

library
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  System.FileWatch
  build-depends:
    base,
    hinotify,
    directory,
    filepath,
    unix,
    terminal-size,
    ansi-terminal,
    process,
    mtl,
    containers,
    exceptions,
    data-default,
    bytestring,
    utf8-string,
    time,
    optics,
